--- a/EcommerceBackend/src/main/resources/application.properties
+++ b/EcommerceBackend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.jmx.exposure.include=*
 
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ecommerce;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
-spring.datasource.password=raushan7
+spring.datasource.password=
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 
